logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-02T190000+0000/task_id=Load_songplays_fact_table/attempt=1.log
[2025-07-24T13:53:38.713+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T19:00:00+00:00 [queued]>
[2025-07-24T13:53:38.724+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T19:00:00+00:00 [queued]>
[2025-07-24T13:53:38.725+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T13:53:38.738+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 19:00:00+00:00
[2025-07-24T13:53:38.744+0000] {standard_task_runner.py:60} INFO - Started process 552 to run task
[2025-07-24T13:53:38.748+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T19:00:00+00:00', '--job-id', '396', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmphldvddwl']
[2025-07-24T13:53:38.751+0000] {standard_task_runner.py:88} INFO - Job 396: Subtask Load_songplays_fact_table
[2025-07-24T13:53:38.820+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T19:00:00+00:00 [running]> on host a4bcda7cb679
[2025-07-24T13:53:38.881+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T19:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T19:00:00+00:00'
[2025-07-24T13:53:38.887+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 168, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 127, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T13:53:38.899+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T190000, start_date=20250724T135338, end_date=20250724T135338
[2025-07-24T13:53:38.909+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 396 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 552)
[2025-07-24T13:53:38.920+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T13:53:38.945+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-07-24T17:23:09.321+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T19:00:00+00:00 [queued]>
[2025-07-24T17:23:09.371+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T19:00:00+00:00 [queued]>
[2025-07-24T17:23:09.374+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T17:23:09.479+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 19:00:00+00:00
[2025-07-24T17:23:09.704+0000] {standard_task_runner.py:60} INFO - Started process 1974 to run task
[2025-07-24T17:23:09.716+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T19:00:00+00:00', '--job-id', '2225', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp9jogrdps']
[2025-07-24T17:23:09.752+0000] {standard_task_runner.py:88} INFO - Job 2225: Subtask Load_songplays_fact_table
[2025-07-24T17:23:10.836+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T19:00:00+00:00 [running]> on host 5def55d2a1b5
[2025-07-24T17:23:11.635+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T19:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T19:00:00+00:00'
[2025-07-24T17:24:54.751+0000] {python.py:201} INFO - Done. Returned value was: None
[2025-07-24T17:24:55.956+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T190000, start_date=20250724T172309, end_date=20250724T172455
[2025-07-24T17:24:56.575+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2025-07-24T17:24:57.067+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
